infra/k8s/loadgen.yaml
apiVersion: v1
kind: Pod
metadata:
  name: loadgen
  namespace: halan
  labels:
    app: loadgen
    version: latest
spec:
  containers:
  - name: loadgen
    image: busybox
    command: ['/bin/sh', '-c']
    args:
    - |
      while true; do
        wget -q -O- http://halan-nginx.halan.svc.cluster.local > /dev/null
        wget -q -O- http://halan-nginx.halan.svc.cluster.local/api/name > /dev/null
        sleep 0.5
      done
  restartPolicy: Always
